src/ui/snapshots/terminal_rpg__ui__tests__items_item_unknown_ascii.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
+ The Ossuary ---------------------------------------++ Inspect ---------------+
|                                                    ||INSPECT                 |
|                                                    ||44,18  UNKNOWN          |
|                                                    ||                        |
|                                        .           ||The dark keeps its      |
|                                        .           ||secrets.                |
|                                        .           ||                        |
|                                      ##.##         ||                        |
|                                    t.......        ||                        |
|                                     .......        ||                        |
|                                   #........#       ||                        |
|                                   #........#       ||                        |
|                                   #....@...#       ||                        |
|                                   #........#       ||                        |
|                                   #........#       ||                        |
|                                    ........        ||                        |
|                                      #####         ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
